Fix another alignment isue with ul

--- a/media/css/screen.css
+++ b/media/css/screen.css
@@ -155,7 +155,7 @@ header h1 {
 }
 
 nav {
-    margin-top: 23px;
+    margin-top: 29px;
 	float: right;
 }
 
